Fixed overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -260,7 +260,9 @@ input[type=submit]:focus {
 }
 
 .navbar {
-  width: 100%;
+  max-width: 100%;
+  width: 480px;
+  margin: 0 auto;
 }
 
 .navbar-row {
@@ -321,8 +323,14 @@ input[type=submit]:focus {
   min-height: 100svh;
 }
 
+.levelscreen-footer {
+  max-width: 100%;
+  width: 480px;
+  margin: 0 auto;
+}
+
 .gameplay-game {
-  /* overflow: hidden; */
+  overflow: hidden;
   flex: 1;
   width: 100%;
   position: relative;
@@ -474,10 +482,10 @@ input[type=submit]:focus {
 
 
 .app {
-  width: 480px;
-  max-width: 100%;
-  margin: 0 auto;
-  min-height: 100svh;
+  /* width: 480px; */
+  /* max-width: 100%;
+  margin: 0 auto; */
+  /* min-height: 100svh; */
 }
 
 
